Fixed the navbar overlapping body content

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,15 @@
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+//body
+ body {
+  padding-top: 70px;
+ }
+
+//navbar
+nav {
+  height: 60px;
+  width: 100%;
+  position: fixed;
+}
